# OvrDos.apk

./: error.txt  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: Android.Manifest.xml
app/src/main/cpp/: CMakeLists.txt  aimbot.cpp  bypass.cpp  main.cpp  memory.cpp  memory.h
app/src/main/java/com/sys/opt/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
